--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -135,7 +135,7 @@ h1+p {
 
 h2 {
 	font-size: 1.1em;
-	color: #a00;
+	color: rgb(248, 172, 217);
 	margin-top: 2em;
 	position: relative;
 	top: 1.2em;
